# cmake_L476_modbus

project/: CMakeLists.txt
project/L476_modbus/: .mxproject  L476_modbus.ioc
project/L476_modbus/Core/Inc/: hsm_config.h  main.h  modbus.h  platform.h  state.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
project/L476_modbus/Core/Src/: callbacks.c  main.c  modbus.c  platform.c  state_idle.c  state_parse.c  state_receive.c  state_wait.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
project/cmake/: dependencies.cmake
